changes in the frontend for the encargado of convivencia
solo cosas visuales

--- a/FRONTEND/EncargadoConvivencia/Homepage.html
+++ b/FRONTEND/EncargadoConvivencia/Homepage.html
@@ -31,8 +31,6 @@
         <button class="abrir-protocolo">Abrir protocolo</button>
     </main>
 
-    /* Tabla */
-
     <table class="protocol-table">
     <thead>
         <tr>
@@ -48,7 +46,7 @@
     </thead>
     <tbody>
         <tr>
-            <td>Pedro sánchez - Carlos Urdaneta</td>
+            <td>Hugo Chavez - Carlos Urdaneta</td>
             <td>7°A - 8°B</td>
             <td>2. Violencia entre miembros de la C.E</td>
             <td>Completado</td>
