--- a/frontend/Log In/Login.html
+++ b/frontend/Log In/Login.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <title>Login Page</title>
-        <link rel="stylesheet" href="frontend\login\login.css">
-        <script src="frontend\login\login_design.js" defer></script>
+        <link rel="stylesheet" href="Login.css">
+        <script src="Logica_Login.js" defer></script>
     </head>
     <body>
         <div class="container">
-            <img src="frontend\login_imgs\logocolegioarzobispado2.png" class="logo">
+            <img src="../imagesforlogin/logocolegioarzobispado2.png" class="logo">
 
             <div class="botones">
                 <button class="btn" id="btn-convivencia">Encargado de convivencia escolar</button>
